package com.sangfor.moa.protobuf;

message PB_IOSInfInfo
{
    optional string class_name = 1;     // 类名
    optional string method_name = 2;    // 方法名
}

message PB_SendIOSInfReq
{
	repeated PB_IOSInfInfo iOS_info = 1;
}

message PB_SendIOSInfRsp
{
	optional int32	result = 1;				//	返回结果。 值为负数则出错。
}